<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.home.HomeFragment">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="0dp"
        android:layout_height="220sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="421dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:background="@color/black"
                android:contentDescription="@string/skills_logo"
                android:src="@drawable/skills_logo" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="421dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/electrical_training"
                android:contentDescription="@string/electrical_course_image"
                android:src="@drawable/electrical_training" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="421dp"
                android:layout_height="match_parent"
                android:background="@drawable/embroidery_pic"
                android:contentDescription="@string/embroidery_course_image"
                android:src="@drawable/embroidery_pic" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="421dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/jewellery_making"
                android:contentDescription="@string/ribbon_course_image"
                android:src="@drawable/jewellery_making" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="421dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/musical_pic"
                android:contentDescription="@string/music_course_image"
                android:src="@drawable/musical_pic" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/topcourserecyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/newcourserecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/newcourserecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/topcourserecyclerview" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/newsrecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:background="#632020"
        android:gravity="center"
        android:text="@string/top_courses"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/topcourserecyclerview"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView2"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:background="#610F6A"
        android:gravity="center"
        android:text="@string/new_courses"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />


</androidx.constraintlayout.widget.ConstraintLayout>