<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/googleSignIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loground"
    android:scrollbarSize="4dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/helloText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_there"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="152dp"
        android:background="@drawable/edit_round"
        android:drawableStart="@android:drawable/sym_action_email"
        android:drawablePadding="5sp"
        android:ems="15"
        android:hint="@string/someone_gmail_com"
        android:importantForAutofill="no"
        android:includeFontPadding="true"
        android:inputType="textEmailAddress"
        android:lineSpacingExtra="0sp"
        android:maxLines="1"
        android:minLines="1"
        android:textColor="@color/red"
        android:textColorHighlight="#F4172A"
        android:textColorHint="#707070"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logtowelcome" />

<!--    <view-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/password"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/email"-->
<!--        app:layout_constraintStart_toStartOf="@+id/email"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/email"></view>-->
<!--    <view-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/password"-->
<!--        app:layout_constraintStart_toStartOf="@+id/password"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/password"></view>-->

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_round"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:ems="15"
        android:foregroundGravity="center_vertical|center_horizontal"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minLines="1"
        android:textColorHighlight="#F4172A"
        android:textColorHint="#707070"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:background="#f4172a"
        android:paddingLeft="35dp"
        android:paddingTop="2dp"
        android:paddingRight="35dp"
        android:paddingBottom="2dp"
        android:text="@string/log_in"
        android:textColor="#ffffff"
        android:textColorHighlight="#ffffff"
        android:textColorLink="#ffffff"
        android:textSize="16sp"
        app:backgroundTint="#f4172a"
        app:cornerRadius="20sp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:rippleColor="#F4172A" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/logtowelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:clickable="true"
        android:contentDescription="@string/backbtn"
        android:tint="#EA1B1B"
        app:backgroundTint="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#F4172A"
        app:srcCompat="@drawable/abc_vector_test"
        android:focusable="true" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginbtn" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/forgot_password"
        android:textColor="#F4172A"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/googlebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_google"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/forgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/forgot" />

</androidx.constraintlayout.widget.ConstraintLayout>