<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CourseFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/contentcard"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/contentrecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/contentimage"
                android:layout_width="104dp"
                android:layout_height="117dp"
                android:contentDescription="@string/profile"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/contenttitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/contenttitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:paddingStart="0dp"
                android:text="@string/textview"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/contentimage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/contentdescription"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/textview"
                app:layout_constraintBottom_toTopOf="@+id/enrollbtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/contentimage"
                app:layout_constraintTop_toBottomOf="@+id/contenttitle" />

            <Button
                android:id="@+id/enrollbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enroll"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/contentdescription"
                app:layout_constraintStart_toStartOf="@+id/contentdescription"
                app:layout_constraintTop_toBottomOf="@+id/contentdescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contentrecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contentcard" />

</androidx.constraintlayout.widget.ConstraintLayout>